--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+/*Para la imagen del login*/
+.bg-cover{
+  width: 100%;
+  height: 100%;
+  background: url("./assets/img/login/loginImg.jpg") no-repeat center;
+  background-size: cover;
+}
+
+/*Para los inputs cuadrados*/
+input, input[type="text"]{
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px ;
+  border-radius: 2px ;
+  border-width: 2px 2px 2px 2px;
+  padding: 10px;
+}
+
+input, input[type="button"]{
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px ;
+  border-radius: 2px ;
+  border-width: 2px 2px 2px 2px;
+  padding: 10px;
+}
