--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
 
     <!--Advertencia inferior-->
     <div class="row mh-50 h-50  d-flex justify-content-center align-items-end">
-      <div class="col-8">
+      <div class="col-8 text-center">
         <p style="font-size: 0.8em; color: grey;">Si no posee un usuario póngase en contacto  con el moderador de su asociación</p>
       </div>
     </div>
