--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="container-fluid min-vw-100 h-100 m-0 p-0 d-flex justify-content-center">
-  <app-login></app-login>
+  <router-outlet></router-outlet>
 </div>
