--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,3 +1,6 @@
-<div class="row min-vw-100 h-100 d-flex justify-content-center">
-  <app-navbar class="min-vw-100"></app-navbar>
+<div class="row min-vw-100 d-flex justify-content-center">
+  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 2em;"></app-navbar>
+</div>
+<div class="row">
+  <app-info-bar class="min-vw-100 d-flex justify-content-center"></app-info-bar>
 </div>
