--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 .bg-cover{
   width: 100%;
   height: 100%;
-  background: url("./assets/img/login/loginImg.jpg") no-repeat center;
+  background: url("./assets/img/login/dibujoLogin.jpeg") no-repeat center;
   background-size: cover;
 }
 
@@ -21,4 +21,15 @@ input, input[type="button"]{
   border-radius: 2px ;
   border-width: 2px 2px 2px 2px;
   padding: 10px;
+}
+
+/*Ampliar tamaño de letra navbar*/
+.nav-link{
+  font-size: large;
+}
+
+/*userNavLink*/
+.userNavLink{
+  position: absolute;
+  right: 0px;
 }
