Interfaz principal terminada

--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -1,1 +1,11 @@
-<p>error-page works!</p>
+<div class="row min-vw-100 d-flex justify-content-center darkblue-bg-snowmasher" style="height: 2em;">
+  <a class="text-white" href="/">INICIO</a>
+</div>
+
+<div class="row min-vw-100 d-flex justify-content-center">
+  <img src="../../assets/img/errors/404.gif">
+</div>
+
+<div class="row">
+  <app-footer class="min-vw-100 fixed-bottom"></app-footer>
+</div>
