--- a/src/app/info-bar-user/info-bar-user.component.html
+++ b/src/app/info-bar-user/info-bar-user.component.html
@@ -1,14 +1,13 @@
 <div class="container-fluid blue-bg-snowmasher d-flex">
   <div style="background-color: cornsilk; width: 7em; height: 7em; margin: 10px; text-align: center; margin-left: 3em;">
-    <p>IMAGEN ASOCIACION</p>
+    <p>IMAGEN Usuario</p>
   </div>
   <div class="col" style="margin: 10px;">
-    <h4 class="text-white">Nombre Asoc.</h4>
-    <h6 class="text-white">Nombre Moderador</h6>
-    <h6 class="text-white">Miembros: </h6>
+    <h4 class="text-white">Nombre Usuario</h4>
+    <h6 class="text-white">Nombre Asociacion</h6>
+    <h6 class="text-white">Ejemplares: </h6>
   </div>
   <div class="col w-70 d-flex justify-content-end" style="margin: 10px;">
-    <a class="btn btn-warning asoc-btn" href="/principal">Publicaciones</a>
-    <a class="btn btn-warning asoc-btn" href="/principal/miembros">Miembros</a>
+    <input class="btn btn-warning asoc-btn" type="button" value="Ir a Asociación">
   </div>
 </div>
