--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+<nav class="navbar navbar-expand-lg navbar-light darkblue-bg-snowmasher">
   <div class="container-fluid d-flex align-center">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="#">Principal</a>
+          <a class="nav-link active text-white" aria-current="page" href="/principal">Principal</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Mis Canarios</a>
+          <a class="nav-link text-white" href="/canarios">Mis Canarios</a>
         </li>
       </ul>
       <form class="d-flex m">
@@ -17,10 +17,10 @@
         <input class="btn btn-outline-light ml-2" type="button" value="Buscar">
       </form>
 
-      <a class="nav-link text-white userNavLink" href="#">
+      <a class="nav-link text-white userNavLink" href="/panel">
         <span>
           Usuario
-          <img class="img rounded-circle" style="height: 3rem;" src="../../assets/img/login/usuario.png" alt="Imagen del usuario">
+          <img class="img rounded-circle" style="height: 3rem;" src="../../assets/img/icons/usuario.png" alt="Imagen del usuario">
         </span>
       </a>
     </div>
