--- a/src/app/miembros/miembros.component.html
+++ b/src/app/miembros/miembros.component.html
@@ -5,10 +5,7 @@
   <app-info-bar class="min-vw-100 d-flex justify-content-center"></app-info-bar>
 </div>
 <div class="row">
-  <app-post class="min-vw-100 d-flex justify-content-center"></app-post>
-</div>
-<div class="row">
-  <app-post class="min-vw-100 d-flex justify-content-center"></app-post>
+  <app-lista-miembros class="min-vw-100 d-flex justify-content-center"></app-lista-miembros>
 </div>
 <div class="row">
   <app-footer class="min-vw-100"></app-footer>
