--- a/src/app/info-bar/info-bar.component.html
+++ b/src/app/info-bar/info-bar.component.html
@@ -3,8 +3,8 @@
     <p>IMAGEN ASOCIACION</p>
   </div>
   <div class="col" style="margin: 10px;">
-    <h4 class="text-white">Nombre Asoc.</h4>
-    <h6 class="text-white">Nombre Moderador</h6>
+    <h4 class="text-white">{{ asociacion.nombre }}</h4>
+    <h6 class="text-white">Nombre Moderador: {{ asociacion.id_mod }}</h6>
     <h6 class="text-white">Miembros: </h6>
   </div>
   <div class="col w-70 d-flex justify-content-end" style="margin: 10px;">
