--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,16 +1,18 @@
-<div class="container mt-4 border darkblue-border-snowmasher" style="min-height: 20em;">
-  <div class="row darkblue-bg-snowmasher text-light p-2 d-flex flex-column" style="min-height: 5em;">
-    <h4>Titulo de la publicación</h4>
-    <h6>DD/MM/YYYY HH:MM:SS</h6>
-  </div>
-  <div class="row">
-    <div class="col-6 p-4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel gravida ligula, in facilisis urna. Vestibulum hendrerit auctor nibh, ac euismod ligula luctus vitae. Etiam tincidunt erat at dictum porttitor. Morbi libero purus, gravida vitae sapien a, malesuada laoreet nisi. Proin tellus nibh, condimentum ac tempor at, gravida fermentum erat. Quisque posuere ex et imperdiet blandit. Vivamus pharetra nisi lectus, sit amet fermentum tellus tempus eu. Vestibulum lobortis egestas nibh. Sed eget massa non nisi scelerisque ullamcorper sed eu odio. Maecenas sodales lectus a tellus pretium rhoncus. Praesent lacinia, eros congue commodo faucibus, ligula tellus sagittis ligula, vitae vehicula odio libero et nisi. Proin scelerisque ipsum faucibus finibus bibendum. Vivamus euismod pellentesque malesuada. Praesent arcu nunc, commodo quis orci in, molestie imperdiet augue. Nullam faucibus tincidunt leo feugiat viverra. Integer ornare quam est, non sollicitudin purus posuere in. </p>
+<div class="col-10" style="width: 100%; display: block;" *ngFor="let post_actual of posts">
+  <div class="col-12 container mt-4 border darkblue-border-snowmasher" style="min-height: 20em;">
+    <div class="row darkblue-bg-snowmasher text-light p-2 d-flex flex-column" style="min-height: 5em;">
+      <h4>{{ post_actual.titulo }}</h4>
+      <h6>{{ post_actual.creado }}</h6>
     </div>
-    <div class="col-6 p-4">
-      <div>
-        <div style="background-color: cornsilk; width: 28em; height: 24em; margin: 10px; text-align: center;">
-          <p>IMAGEN POST</p>
+    <div class="row">
+      <div class="col-6 p-4">
+        <p>{{ post_actual.contenido }}</p>
+      </div>
+      <div class="col-6 p-4">
+        <div>
+          <div style="background-color: cornsilk; width: 28em; height: 24em; margin: 10px; text-align: center;">
+            <p>IMAGEN POST</p>
+          </div>
         </div>
       </div>
     </div>
