--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,14 @@ input, input[type="button"]{
   padding: 10px;
 }
 
+/*Para los botones cuadrados*/
+button, button[type="button"]{
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px ;
+  border-radius: 2px ;
+  border-width: 2px 2px 2px 2px;
+  padding: 10px;
+}
 /*Ampliar tamaño de letra navbar*/
 .nav-link{
   font-size: large;
