--- a/src/app/info-bar-user/info-bar-user.component.html
+++ b/src/app/info-bar-user/info-bar-user.component.html
@@ -1,13 +1,45 @@
-<div class="container-fluid blue-bg-snowmasher d-flex">
+<div class="container-fluid blue-bg-snowmasher d-flex" *ngIf="user.rol=='U'; else noUser">
   <div style="background-color: cornsilk; width: 7em; height: 7em; margin: 10px; text-align: center; margin-left: 3em;">
     <p>IMAGEN Usuario</p>
   </div>
   <div class="col" style="margin: 10px;">
-    <h4 class="text-white">Nombre Usuario</h4>
-    <h6 class="text-white">Nombre Asociacion</h6>
+    <h4 class="text-white">{{ user.name }}</h4>
+    <h6 class="text-white">Asociacion: {{ user.id_asociacion }}</h6>
     <h6 class="text-white">Ejemplares: </h6>
   </div>
   <div class="col w-70 d-flex justify-content-end" style="margin: 10px;">
-    <input class="btn btn-warning asoc-btn" type="button" value="Ir a Asociación">
+    <a routerLink="/principal" class="btn info-btn-usr" type="button">Ir a Asociación</a>
   </div>
 </div>
+
+
+<ng-template #noUser>
+  <div class="container-fluid orange-bg-snowmasher d-flex" *ngIf="user.rol=='M'; else Admin">
+    <div style="background-color: cornsilk; width: 7em; height: 7em; margin: 10px; text-align: center; margin-left: 3em;">
+      <p>IMAGEN Usuario</p>
+    </div>
+    <div class="col" style="margin: 10px;">
+      <h4 class="text-white">{{ user.name }} (Moderador)</h4>
+      <h6 class="text-white">Asociacion: {{ user.id_asociacion }}</h6>
+      <h6 class="text-white">Ejemplares: </h6>
+    </div>
+    <div class="col w-70 d-flex justify-content-end" style="margin: 10px;">
+      <a routerLink="/principal" class="btn info-btn-adm-mod" type="button">Ir a Asociación</a>
+    </div>
+  </div>
+    <ng-template #Admin>
+      <div class="container-fluid red-bg-snowmasher d-flex">
+        <div style="background-color: cornsilk; width: 7em; height: 7em; margin: 10px; text-align: center; margin-left: 3em;">
+          <p>IMAGEN Usuario</p>
+        </div>
+        <div class="col" style="margin: 10px;">
+          <h4 class="text-white">{{ user.name }} (Administrador)</h4>
+          <h6 class="text-white">Asociacion: {{ user.id_asociacion }}</h6>
+          <h6 class="text-white">Ejemplares: </h6>
+        </div>
+        <div class="col w-70 d-flex justify-content-end" style="margin: 10px;">
+          <a routerLink="/principal" class="btn info-btn-adm-mod" type="button">Ir a Asociación</a>
+        </div>
+      </div>
+    </ng-template>
+</ng-template>
