--- a/src/app/info-bar/info-bar.component.html
+++ b/src/app/info-bar/info-bar.component.html
@@ -8,7 +8,7 @@
     <h6 class="text-white">Miembros: </h6>
   </div>
   <div class="col w-70 d-flex justify-content-end" style="margin: 10px;">
-    <a class="btn btn-warning asoc-btn" href="/principal">Publicaciones</a>
-    <a class="btn btn-warning asoc-btn" href="/principal/miembros">Miembros</a>
+    <a class="btn info-btn-usr asoc-btn" routerLink="/principal">Publicaciones</a>
+    <a class="btn info-btn-usr asoc-btn" routerLink="/principal/miembros">Miembros</a>
   </div>
 </div>
