--- a/src/app/GrupoCanario/tabla-canarios/tabla-canarios.component.html
+++ b/src/app/GrupoCanario/tabla-canarios/tabla-canarios.component.html
@@ -36,7 +36,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let canario of canarios">
-          <th style="font-family: monospace;" scope="row">{{ canario.anilla }}</th>
+          <th style="font-family: monospace;" scope="row"><a routerLink="./{{ canario.id }}">{{ canario.anilla }}</a></th>
           <th style="font-family: monospace; text-align: center;" scope="row">{{ canario.sexo }}</th>
           <td style="font-family: monospace;" scope="row">{{ canario.nacimiento }}</td>
           <td style="font-family: monospace;" scope="row">{{ canario.anillaPadre }}</td>
