--- a/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button type="button" class="btn btn-success">Alta</button>
+          <button routerLink="./registerUser" type="button" class="btn btn-success">Alta</button>
           <button type="button" class="btn btn-table-ee">Editar</button>
           <button type="button" class="btn btn-danger">Baja</button>
         </div>
