--- a/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
+++ b/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
@@ -23,9 +23,9 @@
         </div>
 
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button type="button" class="btn btn-success">Alta</button>
-          <button type="button" class="btn btn-table-ee">Editar</button>
-          <button type="button" class="btn btn-danger">Baja</button>
+          <button routerLink="./registerMod" type="button" class="btn btn-success">Alta</button>
+          <button routerLink="./" type="button" class="btn btn-table-ee">Editar</button>
+          <button routerLink="./" type="button" class="btn btn-danger">Baja</button>
         </div>
       </div>
 
