--- a/src/app/GrupoGeneral/info-bar/info-bar.component.html
+++ b/src/app/GrupoGeneral/info-bar/info-bar.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col" style="margin: 10px;">
     <h4 class="text-white">{{ asociacion.nombre }}</h4>
-    <h6 class="text-white">Nombre Moderador: {{ asociacion.id_mod }}</h6>
+    <h6 class="text-white">ID Moderador: {{ asociacion.id_mod }}</h6>
     <h6 class="text-white">Miembros: </h6>
   </div>
   <div class="col w-70 d-flex justify-content-end" style="margin: 10px;">
