Arreglando y añadiendo funcionalidades

--- a/src/app/GrupoCanario/canario/canario.component.html
+++ b/src/app/GrupoCanario/canario/canario.component.html
@@ -6,6 +6,7 @@
 </div>
 
 <div class="row">
+
   <div class="container mt-4 border darkblue-border-snowmasher" style="min-height: 20em;">
     <div class="row darkblue-bg-snowmasher text-light p-2" style="min-height: 5em;">
       <div class="col-6  d-flex flex-column">
@@ -57,6 +58,10 @@
       </div>
     </div>
   </div>
+</div>
+
+<div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
+  <a routerLink="../" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
 
 <div class="row">
