--- a/src/app/GrupoFormularios/Updates/update-mod/update-mod.component.html
+++ b/src/app/GrupoFormularios/Updates/update-mod/update-mod.component.html
@@ -37,6 +37,10 @@
     </form>
   </div>
 </div>
+
+<div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
+  <a routerLink="../" class="btn info-btn-usr" type="button">Atrás</a>
+</div>
 <div class="row">
   <app-footer class="min-vw-100"></app-footer>
 </div>
