--- a/src/app/GrupoGeneral/navbar/navbar.component.html
+++ b/src/app/GrupoGeneral/navbar/navbar.component.html
@@ -20,7 +20,7 @@
       <a class="nav-link text-white userNavLink" href="/panel">
         <span>
           <a class="text-white mr-5" style="font-size: smaller;" routerLink="/loggedout" (click)="logout()">Cerrar sesión</a>
-          Usuario
+          {{ user.name }}
           <img class="img rounded-circle" style="height: 3rem;" src="../../assets/img/icons/usuario.png" alt="Imagen del usuario">
         </span>
       </a>
