Creando vista y update post

--- a/src/app/GrupoCanario/lista-canarios/lista-canarios.component.html
+++ b/src/app/GrupoCanario/lista-canarios/lista-canarios.component.html
@@ -9,6 +9,6 @@
   <app-tabla-canarios style="min-width: 85%; max-width: 90%;"></app-tabla-canarios>
 </div>
 
-<div class="row">
+<div class="row" style="position: relative; bottom: 0px;">
   <app-footer class="min-vw-100 d-flex justify-content-center"></app-footer>
 </div>
