--- a/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
+++ b/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
@@ -24,8 +24,6 @@
 
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
           <button routerLink="./registerAsoc" type="button" class="btn btn-success">Alta</button>
-          <button type="button" class="btn btn-table-ee">Editar</button>
-          <button type="button" class="btn btn-danger">Baja</button>
         </div>
       </div>
 
@@ -38,7 +36,8 @@
               <th scope="col">#ID</th>
               <th scope="col">Nombre</th>
               <th scope="col">ID Moderador</th>
-              <th scope="col">Creado:</th>
+              <th scope="col">Fª Creación</th>
+              <th scope="col" colspan="3">Acciones</th>
             </tr>
           </thead>
           <tbody>
@@ -47,6 +46,27 @@
               <td style="font-family: monospace;" scope="row">{{ asoc.nombre }}</td>
               <td style="font-family: monospace;" scope="row">{{ asoc.idMod }}</td>
               <td style="font-family: monospace;" scope="row">{{ (asoc.creado).split('.')[0] }}</td>
+              <td>
+                <span class="d-flex justify-content-center">
+                  <a title="Editar" routerLink="./updateAsoc/{{ asoc.id }}">
+                    <i class="fas fa-edit"></i>
+                  </a>
+                </span>
+              </td>
+              <td>
+                <span class="d-flex justify-content-center">
+                  <a title="Intercambiar" routerLink="">
+                    <i class="fas fa-exchange-alt"></i>
+                  </a>
+                </span>
+              </td>
+              <td>
+                <span class="d-flex justify-content-center">
+                  <a title="Borrar" routerLink="">
+                    <i class="fas fa-trash"></i>
+                  </a>
+                </span>
+              </td>
             </tr>
             <tr>
           </tbody>
