--- a/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
+++ b/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
@@ -24,8 +24,6 @@
 
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
           <button routerLink="./registerMod" type="button" class="btn btn-success">Alta</button>
-          <button routerLink="./" type="button" class="btn btn-table-ee">Editar</button>
-          <button routerLink="./" type="button" class="btn btn-danger">Baja</button>
         </div>
       </div>
 
@@ -40,6 +38,7 @@
               <th scope="col">N. Real</th>
               <th scope="col">ID Asociación</th>
               <th scope="col">E-Mail</th>
+              <th scope="col" colspan="3">Acciones</th>
             </tr>
           </thead>
           <tbody>
@@ -49,6 +48,27 @@
               <td style="font-family: monospace;" scope="row">{{ mod.real_name }}</td>
               <td style="font-family: monospace;" scope="row">{{ mod.id_asociacion }}</td>
               <td style="font-family: monospace;" scope="row">{{ mod.email }}</td>
+              <td>
+                <span class="d-flex justify-content-center">
+                  <a title="Editar" routerLink="./updateMod/{{ mod.id }}">
+                    <i class="fas fa-edit"></i>
+                  </a>
+                </span>
+              </td>
+              <td>
+                <span class="d-flex justify-content-center">
+                  <a title="Intercambiar" routerLink="">
+                    <i class="fas fa-exchange-alt"></i>
+                  </a>
+                </span>
+              </td>
+              <td>
+                <span class="d-flex justify-content-center">
+                  <a title="Borrar" routerLink="">
+                    <i class="fas fa-trash"></i>
+                  </a>
+                </span>
+              </td>
             </tr>
             <tr>
           </tbody>
