--- a/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
@@ -26,8 +26,6 @@
 
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
           <button routerLink="./registerUser" type="button" class="btn btn-success">Alta</button>
-          <button type="button" class="btn btn-table-ee">Editar</button>
-          <button type="button" class="btn btn-danger">Baja</button>
         </div>
       </div>
 
@@ -41,6 +39,7 @@
               <th scope="col">Name</th>
               <th scope="col">Nombre real</th>
               <th scope="col">Email</th>
+              <th scope="col" colspan="3">Acciones</th>
             </tr>
           </thead>
           <tbody>
@@ -49,6 +48,27 @@
               <th style="font-family: monospace; text-align: center;" scope="row">{{ m.name }}</th>
               <td style="font-family: monospace;" scope="row">{{ m.real_name }}</td>
               <td style="font-family: monospace;" scope="row">{{ m.email }}</td>
+              <td>
+                <span class="d-flex justify-content-center">
+                  <a title="Editar" routerLink="./updateUser/{{ m.id }}">
+                    <i class="fas fa-edit"></i>
+                  </a>
+                </span>
+              </td>
+              <td>
+                <span class="d-flex justify-content-center">
+                  <a title="Intercambiar" routerLink="">
+                    <i class="fas fa-exchange-alt"></i>
+                  </a>
+                </span>
+              </td>
+              <td>
+                <span class="d-flex justify-content-center">
+                  <a title="Borrar" routerLink="">
+                    <i class="fas fa-trash"></i>
+                  </a>
+                </span>
+              </td>
             </tr>
             <tr>
           </tbody>
