--- a/src/app/GrupoPanelUsuario/Info/asociacion-selected/asociacion-selected.component.html
+++ b/src/app/GrupoPanelUsuario/Info/asociacion-selected/asociacion-selected.component.html
@@ -1,1 +1,52 @@
-<p>asociacion-selected works!</p>
+<div class="row min-vw-100 d-flex justify-content-center">
+  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+</div>
+<div class="row">
+  <app-info-bar-user class="min-vw-100 d-flex justify-content-center"></app-info-bar-user>
+</div>
+
+<div class="row">
+  <div class="container mt-4 border darkblue-border-snowmasher" style="min-height: 20em;">
+    <div class="row darkblue-bg-snowmasher text-light p-2" style="min-height: 5em;">
+      <div class="col-6  d-flex flex-column">
+        <h4>{{ asoc.nombre }}</h4>
+        <h6>ID: {{ asoc.id }}</h6>
+      </div>
+      <div class="col-6 d-flex justify-content-end">
+        <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+          <button type="button" routerLink="/panel/adminAsoc/updateasoc/{{ asoc.id }}" style="border: 1px solid var(--blue);" class="btn btn-table-ee">Editar</button>
+          <button type="button" class="btn btn-danger">Baja</button>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col p-4">
+        <table class="table table-hover table-bordered">
+          <tbody>
+            <tr>
+              <td scope="row"><b>ID Moderador:</b> {{ asoc.id_mod }}</td>
+            </tr>
+            <tr>
+              <td scope="row"><b>Creada:</b> {{ asoc.created_at }}</td>
+            </tr>
+            <tr>
+              <td scope="row"><b>Modificado:</b> {{ asoc.updated_at }}</td>
+            </tr>
+            <tr>
+              <td scope="row"><b>Baja:</b> {{ asoc.deleted_at }}</td>
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
+  <a routerLink="/panel/adminUser" class="btn info-btn-usr" type="button">Atrás</a>
+</div>
+
+<div class="row">
+  <app-footer class="min-vw-100 d-flex justify-content-center"></app-footer>
+</div>
