--- a/src/app/GrupoPanelUsuario/Info/post-selected/post-selected.component.html
+++ b/src/app/GrupoPanelUsuario/Info/post-selected/post-selected.component.html
@@ -64,6 +64,10 @@
   </div>
 </div>
 
+<div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
+  <a routerLink="/panel/adminPost" class="btn info-btn-usr" type="button">Atrás</a>
+</div>
+
 <div class="row">
   <app-footer class="min-vw-100 d-flex justify-content-center"></app-footer>
 </div>
