--- a/src/app/GrupoPanelUsuario/Info/user-selected/user-selected.component.html
+++ b/src/app/GrupoPanelUsuario/Info/user-selected/user-selected.component.html
@@ -10,18 +10,17 @@
     <div class="row darkblue-bg-snowmasher text-light p-2" style="min-height: 5em;">
       <div class="col-6  d-flex flex-column">
         <h4>{{ user.name }}</h4>
-        <h6>{{ user.id }}</h6>
+        <h6>ID: {{ user.id }}</h6>
       </div>
       <div class="col-6 d-flex justify-content-end">
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button type="button" routerLink="/panel/adminMod/updateMod/{{ user.id }}" style="border: 1px solid var(--blue);" class="btn btn-table-ee">Editar</button>
-          <button type="button" style="border: 1px solid var(--blue);" class="btn btn-table-ee">Intercambiar</button>
+          <button type="button" routerLink="/panel/adminUser/updateUser/{{ user.id }}" style="border: 1px solid var(--blue);" class="btn btn-table-ee">Editar</button>
           <button type="button" class="btn btn-danger">Baja</button>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-6 p-4">
+      <div class="col p-4">
         <table class="table table-hover table-bordered">
           <tbody>
             <tr>
@@ -46,15 +45,12 @@
           </tbody>
         </table>
       </div>
-      <div class="col-6 p-4">
-        <div>
-          <div style="background-color: cornsilk; width: 28em; height: 24em; margin: 10px; text-align: center;">
-            <p>IMAGEN CANARIO</p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
+</div>
+
+<div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
+  <a routerLink="/panel/adminUser" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
 
 <div class="row">
