--- a/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
+++ b/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
@@ -8,20 +8,6 @@
   <div style="min-width: 85%; max-width: 90%;">
     <div class="container-fluid mt-3">
       <div class="row mr-3 d-flex justify-content-end">
-        <div class="dropdown mr-5">
-          <a class="btn btn-secondary dropdown-toggle" href="/canarios" role="button" id="dropdownMenuLink"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Ordenar por:
-          </a>
-
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#">ID (descendente)</a></li>
-            <li><a class="dropdown-item" href="#">ID (ascendente)</a></li>
-            <li><a class="dropdown-item" href="#">Nombre (descendente)</a></li>
-            <li><a class="dropdown-item" href="#">Nombre (ascendente)</a></li>
-          </ul>
-        </div>
-
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
           <button routerLink="./registerAsoc" type="button" class="btn btn-success">Alta</button>
         </div>
@@ -42,10 +28,10 @@
           </thead>
           <tbody>
             <tr *ngFor="let asoc of asociaciones">
-              <th style="font-family: monospace;" scope="row">{{ asoc.id }}</th>
-              <td style="font-family: monospace;" scope="row">{{ asoc.nombre }}</td>
-              <td style="font-family: monospace;" scope="row">{{ asoc.idMod }}</td>
-              <td style="font-family: monospace;" scope="row">{{ (asoc.creado).split('.')[0] }}</td>
+              <th style="font-family: monospace;" scope="row"><a routerLink="/principal/asociacion/{{ asoc.id }}">{{ asoc.id }}</a></th>
+              <td style="font-family: monospace;" scope="row"><a routerLink="/principal/asociacion/{{ asoc.id }}">{{ asoc.nombre }}</a></td>
+              <td style="font-family: monospace;" scope="row">{{ asoc.id_mod }}</td>
+              <td style="font-family: monospace;" scope="row">{{ (asoc.created_at).split('.')[0] }}</td>
               <td>
                 <span class="d-flex justify-content-center">
                   <a title="Editar" routerLink="./updateAsoc/{{ asoc.id }}">
