Cambrios antes cambio disco duro

--- a/src/app/GrupoCanario/tabla-canarios/tabla-canarios.component.html
+++ b/src/app/GrupoCanario/tabla-canarios/tabla-canarios.component.html
@@ -1,21 +1,8 @@
 <div class="container-fluid mt-3">
   <div class="row mr-3 d-flex justify-content-end">
-    <div class="dropdown mr-5">
-      <a class="btn btn-secondary dropdown-toggle" href="/canarios" role="button" id="dropdownMenuLink"
-        data-bs-toggle="dropdown" aria-expanded="false">
-        Ordenar por:
-      </a>
-
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <li><a class="dropdown-item" href="#">Nº Anilla (descendente)</a></li>
-        <li><a class="dropdown-item" href="#">Nº Anilla (ascendente)</a></li>
-        <li><a class="dropdown-item" href="#">Fª Nacim (descendente)</a></li>
-        <li><a class="dropdown-item" href="#">Fª Nacim (ascendente)</a></li>
-      </ul>
-    </div>
 
     <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-      <button type="button" routerLink="./create" class="btn btn-success">Alta</button>
+      <button type="button" routerLink="./create" class="btn btn-success" style="padding: 0.2em 4em;">Alta</button>
     </div>
   </div>
 
