--- a/src/app/GrupoFormularios/Updates/update-mod/update-mod.component.html
+++ b/src/app/GrupoFormularios/Updates/update-mod/update-mod.component.html
@@ -26,10 +26,10 @@
         <input class="form-control" id="idAs" formControlName="id_asociacion" type="number" value="{{ user.id_asociacion }}">
       </div>
       <div class="mb-3">
-        <input class="form-control" formControlName="password" type="password" placeholder="Confirme la contraseña...">
+        <input class="form-control" formControlName="password" type="password" placeholder="Contraseña...">
       </div>
       <div class="mb-3">
-        <input class="form-control" formControlName="password_confirmation" type="password" placeholder="Repita la contraseña...">
+        <input class="form-control" formControlName="password_confirmation" type="password" placeholder="Confirme la contraseña...">
       </div>
       <div class="mb-3 d-flex justify-content-between">
         <button type="submit" class="btn btn-primary">Editar</button>
@@ -39,7 +39,7 @@
 </div>
 
 <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
-  <a routerLink="../" class="btn info-btn-usr" type="button">Atrás</a>
+  <a routerLink="../../" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
 <div class="row">
   <app-footer class="min-vw-100"></app-footer>
