--- a/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
+++ b/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
@@ -9,7 +9,7 @@
     <div class="container-fluid mt-3">
       <div class="row mr-3 d-flex justify-content-end">
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button routerLink="./registerAsoc" type="button" class="btn btn-success">Alta</button>
+          <button routerLink="./registerAsoc" type="button" class="btn btn-success" style="padding: 0.2em 4em;">Alta</button>
         </div>
       </div>
 
@@ -23,7 +23,7 @@
               <th scope="col">Nombre</th>
               <th scope="col">ID Moderador</th>
               <th scope="col">Fª Creación</th>
-              <th scope="col" colspan="3">Acciones</th>
+              <th scope="col" colspan="2">Acciones</th>
             </tr>
           </thead>
           <tbody>
@@ -36,13 +36,6 @@
                 <span class="d-flex justify-content-center">
                   <a title="Editar" routerLink="./updateAsoc/{{ asoc.id }}">
                     <i class="fas fa-edit"></i>
-                  </a>
-                </span>
-              </td>
-              <td>
-                <span class="d-flex justify-content-center">
-                  <a title="Intercambiar" routerLink="">
-                    <i class="fas fa-exchange-alt"></i>
                   </a>
                 </span>
               </td>
