--- a/src/app/GrupoPanelUsuario/administrarPublicaciones/tabla-publicaciones/tabla-publicaciones.component.html
+++ b/src/app/GrupoPanelUsuario/administrarPublicaciones/tabla-publicaciones/tabla-publicaciones.component.html
@@ -10,7 +10,7 @@
       <div class="row mr-3 d-flex justify-content-end">
 
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button type="button" routerLink="./create" class="btn btn-success">Alta</button>
+          <button type="button" routerLink="./create" class="btn btn-success" style="padding: 0.2em 4em;">Alta</button>
         </div>
       </div>
 
@@ -24,7 +24,7 @@
               <th scope="col">Título</th>
               <th scope="col">Fecha de publicación</th>
               <th scope="col">Última edición</th>
-              <th scope="col" colspan="3">Acciones</th>
+              <th scope="col" colspan="2">Acciones</th>
             </tr>
           </thead>
           <tbody>
@@ -37,13 +37,6 @@
                 <span class="d-flex justify-content-center">
                   <a title="Editar" routerLink="/panel/adminPost/updatePost/{{ pub.id }}">
                     <i class="fas fa-edit"></i>
-                  </a>
-                </span>
-              </td>
-              <td>
-                <span class="d-flex justify-content-center">
-                  <a title="Intercambiar" routerLink="">
-                    <i class="fas fa-exchange-alt"></i>
                   </a>
                 </span>
               </td>
